--- a/src/components/Hotdogs.css
+++ b/src/components/Hotdogs.css
@@ -1,5 +1,11 @@
+.hotdog-list-block {
+  left: 0;
+  text-align: center;
+  padding: 30px;
+}
+
 .hotdog-block {
   border: 1px solid black;
-  font-size: normal;
-  
+  text-align: left;
+  margin: 30px;
 }
