--- a/src/components/Hotdogs.css
+++ b/src/components/Hotdogs.css
@@ -1,3 +1,12 @@
+body {
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  background-color: #211D1D;
+  color: #FEFEFE;
+  font-family: sans-serif;
+}
+
 .hotdog-list-block {
   left: 0;
   text-align: center;
@@ -8,4 +17,9 @@
   border: 1px solid black;
   text-align: left;
   margin: 30px;
+}
+
+.form-create-hotdogs {
+  text-align: center;
+
 }
