--- a/src/components/Hotdogs.css
+++ b/src/components/Hotdogs.css
@@ -1,24 +1,38 @@
 body {
-  text-align: center;
-  padding: 0;
-  margin: 0;
   background-color: #211D1D;
   color: #FEFEFE;
   font-family: 'Open Sans', sans-serif;
 }
 
 .hotdog-list-block {
-  left: 0;
   text-align: center;
-  padding: 30px;
 }
 
 .hotdog-block {
   border: 2px solid #FEFEFE;
   border-radius: 7px;
-  text-align: left;
   margin: 30px;
   padding: 10px;
+  display: table;
+  width: 90%;
+}
+
+.info-container {
+  display: table-cell;
+  vertical-align: middle;
+  width: 80%;
+  text-align: left;
+}
+
+.description, .price {
+  margin-bottom: 10px;
+}
+
+
+.button-container {
+  display: table-cell;
+  vertical-align: middle;
+  width: 20%;
 }
 
 .form-create-hotdogs {
@@ -30,7 +44,7 @@ body {
 }
 
  button {
-   margin-left: 20px;
+   margin: 10px;
    padding: 10px 20px;
    cursor: pointer;
    border: 1px solid #D51086;
