--- a/src/components/Hotdogs.css
+++ b/src/components/Hotdogs.css
@@ -25,7 +25,7 @@ body {
 }
 
 .description, .price {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 
@@ -37,9 +37,10 @@ body {
 
 .form-create-hotdogs {
   text-align: center;
+  margin-bottom: 40px;
 }
 
-.form-create-hotdogs label, input {
+ label {
   margin-left: 10px;
 }
 
@@ -53,4 +54,11 @@ body {
    text-decoration: none;
    color: #ffffff;
    background-color: #D51086;
+}
+
+
+input {
+  padding: 7px 7px;
+  border-radius: 4px;
+  margin-left: 10px;
 }
